--- a/templates/html/public.html
+++ b/templates/html/public.html
@@ -7,7 +7,10 @@
 {% block head %}
     <link rel="stylesheet" href="{% static 'wangeditor/style.css' %}">
     <script src="{% static 'wangeditor/index.js' %}"></script>
+    <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
+
     <script src="{% static 'js/pub_blog.js' %}"></script>
+
     <style>
         #editor—wrapper {
             border: 1px solid #ccc;
@@ -28,28 +31,34 @@
     <h1>发布帖子</h1>
     <div class="mt-3">
         <form action="" method="POST">
+            {% csrf_token %}
             <div class="mt-3">
                 <label class="form-label" for="id_title">标题</label>
-                <input type="text" name="title" id="id_title" class="form-control">
+                <input type="text" name="title" id="title" class="form-control">
             </div>
             <div class="mt-3">
-                <label class="form-label" for="id_title">标签</label>
+                <label class="form-label" for="title">标签</label>
                 <select name="category" id="id_category" class="form-control">
-                    <option value="1">求助</option>
-                    <option value="2">避雷</option>
-                    <option value="3">分享</option>
+                    {% for category in categories %}
+                        <option value="{{ category.id }}">{{ category.name }}</option>
+                    {% endfor %}
+                    {#                    #}
+                    {#                    <option value="1">求助</option>#}
+                    {#                    <option value="2">避雷</option>#}
+                    {#                    <option value="3">分享</option>#}
                 </select>
             </div>
             <div class="mt-3">
-                <label class="form-label" for="id_title">内容</label>
-                <div id="editor—wrapper">
-                    <div id="toolbar-container"><!-- 工具栏 --></div>
-                    <div id="editor-container"><!-- 编辑器 --></div>
-                </div>
+                <label class="form-label" for="content">内容</label>
+                <textarea name="content" id="content" class="form-control"></textarea>
+{#                <div id="editor—wrapper">#}
+{#                    <div id="toolbar-container"><!-- 工具栏 --></div>#}
+{#                    <div id="editor-container"><!-- 编辑器 --></div>#}
+{#                </div>#}
             </div>
 
             <div class="mt3 text-end">
-                <button type="submit" class="btn btn-primary">发布</button>
+                <button type="submit" class="btn btn-primary" id="submit-btn">发布</button>
             </div>
         </form>
     </div>
