帖子详情功能完善

--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -30,10 +30,11 @@
                 {#                <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>#}
                 {#                <li><a href="#" class="nav-link px-2 text-white">About</a></li>#}
             </ul>
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search" action="{% url 'blog:search' %}" method="get">
                 <input type="search"
+                       name="q"
                        class="form-control form-control-dark text-bg-dark"
-                       placeholder="Search..."
+                       placeholder="搜索"
                        aria-label="Search" wfd-id="id0">
             </form>
 
